--- a/startbestanden/projecten_PF/image_gallery.html
+++ b/startbestanden/projecten_PF/image_gallery.html
@@ -10,11 +10,11 @@
   <aside>
     <h1>Modern Art Image Gallery</h1>
     <ul>
-      <li><a href="art/gerard_richter1.jpg" title="Gerhard Richter, Juni n° 527, 1983">Gerard Richter</a></li>
-      <li><a href="art/andrea_branzi.jpg" title="Andrea Branzi: design">Andrea Branzi</a></li>
-      <li><a href="art/eric_poitevin.jpg" title="Eric Poitevin, Sans titre, 2002" >Eric Poitevin</a></li>
-      <li><a href="art/kendell_geers.jpg" title="Kendell Geers,  T.W. (I.N.R.I.), 1994">Kendell Geers</a></li>
-      <li><a href="art/julia_binfield1.jpg" title="Julia Binfield, Affiche Networks & system management Olivetti, 1993">Julia Binfield</a></li>
+      <li><a href="../images/art/gerard_richter1.jpg" title="Gerhard Richter, Juni n° 527, 1983">Gerard Richter</a></li>
+      <li><a href="../images/art/andrea_branzi.jpg" title="Andrea Branzi: design">Andrea Branzi</a></li>
+      <li><a href="../images/art/eric_poitevin.jpg" title="Eric Poitevin, Sans titre, 2002" >Eric Poitevin</a></li>
+      <li><a href="../images/art/kendell_geers.jpg" title="Kendell Geers,  T.W. (I.N.R.I.), 1994">Kendell Geers</a></li>
+      <li><a href="../images/art/julia_binfield1.jpg" title="Julia Binfield, Affiche Networks & system management Olivetti, 1993">Julia Binfield</a></li>
     </ul>
   </aside>
   <div id="kader"></div>
