--- a/startbestanden/taken_PF/JS_taak_DOM_Intro.html
+++ b/startbestanden/taken_PF/JS_taak_DOM_Intro.html
@@ -38,7 +38,7 @@ img{
        eImg.src           = "../images/linda.jpg";
        var sTooltip       = "Elise, System engineer";
        eImg.alt           = sTooltip;
-       eImg.title         = sTooltip;
+       eImg.setAttribute("title",sTooltip);    
        
      /* toevoegen tekst " en chocolade */
        var ePar         = document.getElementsByTagName('p')[0];
