--- a/startbestanden/projecten_PF/image_gallery_versie3.html
+++ b/startbestanden/projecten_PF/image_gallery_versie3.html
@@ -4,20 +4,29 @@
 <meta charset="utf-8">
 <title>Image Gallery</title>
 <link href="image_gallery.css" rel="stylesheet" media="all">
+<script src="gallery_images.js"></script>
+<script src="image_gallery_versie3.js"></script>
 </head>
 <body>
 <div id="container">
+  <div id="noscript"> 
+   <h3>Probleem!</h3> 
+    Deze website gebruikt Javascript: dit is momenteel afgezet in uw browser. <br> 
+    Activeer Javascript via het menu van uw browser en ververs de pagina. 
+  </div> 
   <aside>
     <h1>Modern Art Image Gallery</h1>
-    <ul>
+    <!--<ul>
       <li><a href="../images/art/gerard_richter1.jpg" title="Gerhard Richter, Juni n° 527, 1983">Gerard Richter</a></li>
       <li><a href="../images/art/andrea_branzi.jpg" title="Andrea Branzi: design">Andrea Branzi</a></li>
       <li><a href="../images/art/eric_poitevin.jpg" title="Eric Poitevin, Sans titre, 2002" >Eric Poitevin</a></li>
       <li><a href="../images/art/kendell_geers.jpg" title="Kendell Geers,  T.W. (I.N.R.I.), 1994">Kendell Geers</a></li>
       <li><a href="../images/art/julia_binfield1.jpg" title="Julia Binfield, Affiche Networks & system management Olivetti, 1993">Julia Binfield</a></li>
-    </ul>
+    </ul>-->
   </aside>
-  <div id="kader"></div>
+  <div id="kader">
+    <img id="plaatshouder" src="../images/art/image_gallery.jpg" alt="image gallery" /> 
+  </div>
 </div>
 </body>
 </html>
