--- a/startbestanden/projecten_PF/selectie_examens.html
+++ b/startbestanden/projecten_PF/selectie_examens.html
@@ -64,7 +64,7 @@ label {
     // de evaluatie 
   var sBericht = ""; 
   if(nWisk==0 || nBoek==0 || nInfr==0){
-      alert('BROEKVEGER');
+      alert('GIJ STOMMERIK !');
   }
   if( (nWisk >= 6 && nBoek + nInfr >= 12) || nInfr == 10) { 
     sBericht = "U bent geslaagd";
@@ -76,7 +76,7 @@ label {
       }
   } 
   else { 
-    sBericht = "U bent NIET geslaagd"; 
+    sBericht = "U bent EEN LUIERIK"; 
   } 
   //console.log(sBericht);
   //output naar div 
