--- a/startbestanden/taken_PF/JS_taak_displayImages.html
+++ b/startbestanden/taken_PF/JS_taak_displayImages.html
@@ -77,7 +77,7 @@ div.toggle {
   </ul>
   <p>Controleer of het pad van alle images correct is. </p>
 </header>
-<aside> <img src="../images/VDAB_200.png">
+<aside> <img src="../images/VDAB_200.jpg">
   <p>Een vdab dhtml oefening </p>
 </aside>
 <article>
