--- a/startbestanden/projecten_PF/kalender.html
+++ b/startbestanden/projecten_PF/kalender.html
@@ -4,6 +4,128 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>JS PF project: kalender</title>
 <link rel="stylesheet" href="kalender.css" type="text/css" />
+<script type="text/javascript" src="nuttig_lib.js"></script>
+<script type="text/javascript"> 
+ window.onload = function (){ 
+  // DOM elementen 
+  var divOutput    = document.getElementById('output'); 
+  var divKalender  = document.getElementById('kalender'); 
+   
+  //leeg inhoud 
+  leegNode(divOutput); //functie uit nuttig_lib.js 
+  //plaatst huidige datum-tijd in output element 
+  divOutput.innerHTML = getVandaagStr();
+  //divKalender.innerHTML = maakMaandTabel(2014,1);
+  //divKalender.innerHTML = maakMaandTabel(huidigJaar,huidigeMaand);
+  divKalender.innerHTML = maakJaarKalender(huidigJaar); 
+  dagAanduiden(vandaag,'vandaag'); // huidige datum aanduiden 
+  dagAanduiden(verjaardag,'verjaardag'); // verjaardag aanduiden
+ };
+ 
+ function maakMaandTabel(kalenderJaar,maandIndex){  
+  /* 
+  Dependency: nuttig_lib  
+  Return: string, voor innerHTML: een tabelletje met een maandoverzicht 
+  @kalenderJaar: integer,  4 digit jaar 
+  @maandIndex: integer,  van 0-11 
+   
+  */ 
+  //controle argumenten:  
+  if (isNaN(kalenderJaar) || (kalenderJaar.toString().length!==4)){ 
+   return "fout jaargetal"; 
+  } 
+  if (isNaN(maandIndex) || (maandIndex < 0)|| (maandIndex > 11)){ 
+   return "fout maandgetal"; 
+  } 
+   
+ //weekdag van de eerste dag van de maand 
+  var start_datum = new Date(kalenderJaar, maandIndex, 1); 
+  var start_weekdag = start_datum.getDay(); 
+  
+ //bepaal einddag vr die maand, mogelijke uitzondering februari van schrikkeljaar 
+  var eindDag = arrMaanden[maandIndex][1];  
+  if((maandIndex===1) && (isSchrikkeljaar(kalenderJaar))){
+      eindDag=29;
+  }; 
+  //opbouw returnwaarde string 
+  strMaandTabel = "<table class='kalender'>\n"; 
+  // titelrij 
+  strMaandTabel += "<tr><th colspan='7'>" + arrMaanden[maandIndex][0]+ " "; 
+  strMaandTabel += kalenderJaar + "</th></tr>\n"; 
+   
+  //dagtitels 
+  strMaandTabel += "<tr>"; 
+  for(var i=0;i<7;i++){ 
+    strMaandTabel += "<td>" + arrWeekdagen[i].substr(0,2).toUpperCase() + "</td>"; 
+  } 
+  strMaandTabel += "</tr>\n"; 
+   
+  var dag   = 1; 
+  var teller   = 0; 
+   
+  while(dag<=eindDag){ 
+    // weekrij 
+    strMaandTabel += "<tr>"; 
+    for (var i=0;i<7;i++){ 
+       //teken cellen, met of zonder dag ingevuld 
+      var strId     = ''; // id samengesteld uit maandIndex en dagnummer 
+      var strDagNummer  = ''; //het dagNummer 
+      //schrijf de dagen 
+      if ((teller>=start_weekdag)&&(dag<=eindDag)) { 
+        strDagNummer = dag; 
+        strId = " id='" + kalenderJaar + "_" + maandIndex + "_" + dag + "'"; 
+        dag++; 
+       } 
+      //schrijf de cel    
+      strMaandTabel += "<td " + strId +">" + strDagNummer + "</td>";   
+      teller++; 
+    } 
+    strMaandTabel += "</tr>\n"; 
+  }  
+  strMaandTabel += "</table>\n"; 
+  return strMaandTabel; 
+};
+   
+//---------------------------------------- 
+function dagAanduiden(oDatum,CSS_Class){ 
+/* 
+nodig:   CSS class in stylesheet 
+    id in element 
+     
+@ oDatum: Datum object van aan te duiden dag 
+@ CSS_Class: CSS class dient aanwezig te zijn 
+*/ 
+ //welk jaar, maand en dag? 
+  var dDag   = oDatum.getDate(); 
+  var dMaand   = oDatum.getMonth(); 
+  var dJaar   = oDatum.getFullYear(); 
+   
+  //construeer id voor cel 
+  var strId = dJaar+"_"+dMaand+"_"+dDag; 
+  var dCel = document.getElementById(strId); 
+  if (dCel){ 
+    dCel.className = CSS_Class; 
+  } 
+};
+
+function maakJaarKalender(kalenderJaar){ 
+   /* 
+  Dependency: maakMaandTabel()  
+  Return: string, voor innerHTML: 12 maandtabellen 
+   
+  @ kalenderJaar: integer,  4 digit jaar 
+  */ 
+ 
+  strJaarKalender=""; 
+  for(var i=0;i<12;i++){ 
+    strJaarKalender += "<div class='maandContainer'>"; 
+    strJaarKalender += maakMaandTabel(kalenderJaar,i); 
+    strJaarKalender += "</div>"; 
+    } 
+  return strJaarKalender; 
+};
+
+</script> 
 <style media="screen" type="text/css">
 <!--
 noscript div {
@@ -25,7 +147,7 @@ div.maandContainer{
 </head>
 <body>
 <h1>JS PF project: JS Kalender</h1>
-<div id="output">output element</div>
+<div id="output"></div>
 <div id="kalender"></div>
 </body>
 </html>
