--- a/startbestanden/projecten_PF/cookiebank.html
+++ b/startbestanden/projecten_PF/cookiebank.html
@@ -40,6 +40,46 @@ label.msg {
 	text-align: left;
 }
 </style>
+<script> 
+window.onload = function(){ 
+   
+  //DOM elementen 
+  var eOutput     = document.getElementById('output'); 
+  var eKnopKrediet   = document.getElementById('krediet'); 
+  var eKnopDebiet   = document.getElementById('debiet'); 
+   
+  //standaardwaarden 
+  var sMsg    = '';      // bericht aan gebruiker 
+  var sNaam     = 'nieuwe klant';  // standaard invulling naam 
+  var nSaldo     = 0;      // standaard saldo 
+   
+    //test cookie 
+  if(getCookie('klantnaam')){ 
+    //gekende klant 
+    var sNaam   = getCookie('klantnaam'); 
+    var nSaldo   = getCookie('saldo'); 
+   
+    //bericht 
+    sMsg += "Welkom " + sNaam + ","; 
+    sMsg += "uw saldo bedraagt " + nSaldo + " Euro"; 
+  } 
+  else{ 
+    //eerste bezoek   
+    sMsg += "Welkom beste bezoeker. "; 
+    sMsg += "Als u bij ons een nieuwe rekening opent, ontvangt u een startsaldo van 100 Euro!";
+  }
+    // generische DOM elementen 
+  var dfBericht  = document.createDocumentFragment(); 
+  var eNl   = document.createElement('br'); 
+   
+  //vervolledig documentFragment en voeg in 
+  var tNode = document.createTextNode(sMsg); 
+  dfBericht.appendChild(tNode); 
+  dfBericht.appendChild(eNl.cloneNode(false)); 
+  dfBericht.appendChild(eNl.cloneNode(false)); 
+  eOutput.appendChild(dfBericht); 
+  }; //einde window.onload 
+</script> 
 </head>
 <body>
 <h1>CookieBank</h1>
