--- a/startbestanden/projecten_PF/cookiebank.html
+++ b/startbestanden/projecten_PF/cookiebank.html
@@ -40,6 +40,18 @@ label.msg {
 	text-align: left;
 }
 </style>
+<script>
+ window.onload = function(){
+ //DOM elementen
+ var eOutput = document.getElementById('output');
+ var eKnopKrediet = document.getElementById('krediet');
+ var eKnopDebiet = document.getElementById('debiet');
+ //standaardwaarden
+ var sMsg = ''; // bericht aan gebruiker
+ var sNaam = 'nieuwe klant'; // standaard invulling naam
+ var nSaldo = 0; // standaard saldo
+}; //einde window.onload
+</script>
 </head>
 <body>
 <h1>CookieBank</h1>
