--- a/startbestanden/projecten_PF/cookiebank.html
+++ b/startbestanden/projecten_PF/cookiebank.html
@@ -40,9 +40,38 @@ label.msg {
 	text-align: left;
 }
 </style>
+<script type="text/javascript" src="nuttig_lib.js"></script>
 <script> 
 window.onload = function(){ 
-   
+  
+        /******************FUNCTIES*********************************/
+ function maakKnop(tekst){
+ /*
+ returnt een DOM button element
+ */
+  var eKnop = document.createElement('button');
+  var sTekst = document.createTextNode(tekst);
+  eKnop.appendChild(sTekst);
+  eKnop.setAttribute('type','button');
+  return eKnop;
+ }
+ //----------------------------------------------------------
+ function rekeningOpenen(){
+  //console.log('rekening openen');
+  var sNaam = window.prompt("Uw naam, graag?","");
+  if (sNaam!=="" && sNaam!==null){
+   setCookie('klantnaam',sNaam,100);
+   setCookie('saldo',100,100);
+   window.history.go(0);
+  }
+ }
+ //----------------------------------------------------------
+ function rekeningSluiten(){
+  //console.log('rekening sluiten');
+  clearCookie('klantnaam');
+  clearCookie('saldo');
+  window.history.go(0);
+ }
   //DOM elementen 
   var eOutput     = document.getElementById('output'); 
   var eKnopKrediet   = document.getElementById('krediet'); 
@@ -61,12 +90,18 @@ window.onload = function(){
    
     //bericht 
     sMsg += "Welkom " + sNaam + ","; 
-    sMsg += "uw saldo bedraagt " + nSaldo + " Euro"; 
+    sMsg += "uw saldo bedraagt " + nSaldo + " Euro";
+    //knop
+    var eKnop = maakKnop('Sluit rekening');
+    eKnop.addEventListener('click',rekeningSluiten); //eventhandler
   } 
   else{ 
     //eerste bezoek   
     sMsg += "Welkom beste bezoeker. "; 
     sMsg += "Als u bij ons een nieuwe rekening opent, ontvangt u een startsaldo van 100 Euro!";
+    //knop
+    var eKnop = maakKnop('Open rekening');
+    eKnop.addEventListener('click',rekeningOpenen);
   }
     // generische DOM elementen 
   var dfBericht  = document.createDocumentFragment(); 
@@ -76,8 +111,13 @@ window.onload = function(){
   var tNode = document.createTextNode(sMsg); 
   dfBericht.appendChild(tNode); 
   dfBericht.appendChild(eNl.cloneNode(false)); 
-  dfBericht.appendChild(eNl.cloneNode(false)); 
+  dfBericht.appendChild(eNl.cloneNode(false));
+  dfBericht.appendChild(eKnop);
   eOutput.appendChild(dfBericht); 
+  
+  //event handler voor + - knoppen
+  eKnopKrediet.addEventListener('click', function(){ berekenen('+');});
+  eKnopDebiet.addEventListener('click', function(){ berekenen('-');});
   }; //einde window.onload 
 </script> 
 </head>
