--- a/startbestanden/projecten_PF/html5cookiebank.html
+++ b/startbestanden/projecten_PF/html5cookiebank.html
@@ -43,7 +43,36 @@ label.msg {
 <script type="text/javascript" src="nuttig_lib.js"></script>
 <script> 
 window.onload = function(){ 
-  
+ //standaardwaarden
+ var sMsg = ''; // bericht aan gebruiker
+ var sNaam = 'nieuwe klant'; // standaard invulling naam
+ var nSaldo = 0; // standaard saldo
+ if(localStorage){
+   //kan deze browser dit script aan?
+   //console.log('localStorage OK');
+   if(localStorage.klantnaam){
+   //gekende klant
+   var sNaam = localStorage.klantnaam;
+   var nSaldo = parseFloat(localStorage.saldo).toFixed(2);
+   //bericht
+   sMsg += "Welkom " + sNaam + ",";
+   sMsg += "uw saldo bedraagt " + nSaldo + " Euro";
+   //knop
+   var eKnop = maakKnop('Sluit rekening');
+   eKnop.addEventListener('click',rekeningSluiten); //eventhandler
+  }
+  else{
+   //nieuwe klant, eerste bezoek
+   sMsg = "Welkom beste bezoeker. ";
+   sMsg += "Als u bij ons een nieuwe rekening opent, ontvangt u een startsaldo van 100 Euro!";
+   //knop
+   var eKnop = maakKnop('Open rekening');
+   eKnop.addEventListener('click',rekeningOpenen);
+  }
+ }
+ else {
+     //gebruik cookies
+ }
         /******************FUNCTIES*********************************/
  function maakKnop(tekst){
  /*
@@ -60,18 +89,73 @@ window.onload = function(){
   //console.log('rekening openen');
   var sNaam = window.prompt("Uw naam, graag?","");
   if (sNaam!=="" && sNaam!==null){
-   setCookie('klantnaam',sNaam,100);
-   setCookie('saldo',100,100);
+   localStorage.setItem('klantnaam',sNaam);
+   localStorage.setItem('saldo',100);
+   //setCookie('klantnaam',sNaam,100);
+   //setCookie('saldo',100,100);
    window.history.go(0);
   }
- }
+ };
  //----------------------------------------------------------
  function rekeningSluiten(){
   //console.log('rekening sluiten');
-  clearCookie('klantnaam');
-  clearCookie('saldo');
+  localStorage.clear();
+  //clearCookie('klantnaam');
+  //clearCookie('saldo');
   window.history.go(0);
+ };
+ 
+ function berekenen(bewerking){
+/*
+storting of geldafhaling
+@bewerking = een '+' of een '-' teken
+*/
+ var eBedrag = document.getElementById('bedrag');
+ var sBedrag = eBedrag.value;
+ var sSaldo = localStorage.getItem('saldo');
+ var sBericht = "";
+ var re = /,/;
+ sBedrag = sBedrag.replace(re,'.');
+ var nNieuwSaldo = 0;
+ if(sSaldo !== null && sSaldo !== ""){
+  if(sBedrag !== "" && !isNaN(sBedrag)){
+   nSaldo = parseFloat(sSaldo);
+   nBedrag = parseFloat(sBedrag);
+   switch (bewerking) {
+    case '+':
+    nNieuwSaldo = nSaldo + nBedrag;
+    break;
+    case '-':
+    nNieuwSaldo = nSaldo - nBedrag;
+    break;
+   }
+  if (nNieuwSaldo<=0){
+      var nMax = nSaldo-1;
+      sBericht += "Uw saldo is onvoldoende om dit bedrag af te halen. ";
+      sBericht += "U kunt maximaal " + nMax + " Euro afhalen.";
+      eBedrag.value = nMax;
+      eBedrag.focus();
+      toonWaarschuwing(sBericht);
+   }
+   else{
+    localStorage.setItem('saldo',nNieuwSaldo,100);
+    window.history.go(0);
+    eBedrag.value = "";
+   }
+  }
+  else{
+   alert('U moet een correct bedrag ingeven');
+  }
  }
+ else{
+ //geen saldo = geen rekening
+  var bOpenen = window.confirm('U heeft nog geen rekening geopend, nu even doen?');
+  if(bOpenen===true){
+     rekeningOpenen();
+  }
+ }
+};
+ 
   //DOM elementen 
   var eOutput     = document.getElementById('output'); 
   var eKnopKrediet   = document.getElementById('krediet'); 
@@ -83,10 +167,10 @@ window.onload = function(){
   var nSaldo     = 0;      // standaard saldo 
    
     //test cookie 
-  if(getCookie('klantnaam')){ 
+  if(localStorage.getItem('klantnaam')){ 
     //gekende klant 
-    var sNaam   = getCookie('klantnaam'); 
-    var nSaldo   = getCookie('saldo'); 
+    var sNaam   = localStorage.getItem('klantnaam'); 
+    var nSaldo   = parseFloat(localStorage.getItem('saldo')).toFixed(2); 
    
     //bericht 
     sMsg += "Welkom " + sNaam + ","; 
